--- a/1stassg.html
+++ b/1stassg.html
@@ -6,14 +6,42 @@
 </head>
 <body>
 	<div class="big_box">
-		<div class="box">
-			<div class="box1"></div>
-			<div class="box2"></div>
-			<div class="box3"></div>
-			<div class="box4"></div>
-			<div class="box5"></div>
+	<div class="box">
+		<div class="box1">
+			<div class="box11">CSS ZEN GARDEN
+			<br style="font-style: italics;"> The Beauty of CSS Design
+			</div>
+			<div class="box12">
+				<a  href="" style="font: 10px;
+	color: white;
+	 margin:auto;text-decoration: none;">VIEW ALL DESIGNS></a>
+			</div>
+		</div>
+		<div class="box2">
+			<div class="box21">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+			<div class="box22"></div>
+		</div>
+		<div class="box3">
+			<div class="box31"></div>
+			<div class="box32"></div>
+		</div>
+		<div class="box4">
+			<div class="box41"></div>
+			<div class="box42"></div>
+		</div>
+		<div class="box5">By <b>Dave Shea,</b> Bandwith graciously donated by <b>mediatemple</b>
+		<p>Now available:<b>Zen Garden the book</b></p></div>
+		<div class="box6">
+			
 		</div>
 	</div>
 
+	
+		</div>
 </body>
 </html>
